application/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tajawal-poc
  namespace: checkout
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: checkoutroute
  namespace: checkout
spec:
  parentRefs:
    - name: tajawal-poc
      sectionName: http
  rules:
    - backendRefs:
        - name: checkout
          namespace: checkout
          kind: Service
          port: 80
          weight: 100
